tmux plugin manager & tmux powerline

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -7,3 +7,22 @@ unbind C-b
 
 # set vi mode when entering copy mode
 setw -g mode-keys vi
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-pain-control'
+
+# POWERLINE #################################
+# SETUP FOR TTY #############################
+# pip install powerline-status
+# git clone https://github.com/powerline/fonts.git --depth=1 /tmp
+# cd /tmp/fonts
+# cp -r Terminus/PSF/*.psf.gz /usr/share/consolefonts
+# setfont /usr/share/consolefonts/...
+#############################################
+run-shell "powerline-daemon -q"
+source "/home/gyh/.local/lib/python3.7/site-packages/powerline/bindings/tmux/powerline.conf"
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run -b '~/.tmux/plugins/tpm/tpm'
