setup script for powerline and tmux

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -22,7 +22,7 @@ set -g @plugin 'tmux-plugins/tmux-pain-control'
 # setfont /usr/share/consolefonts/...
 #############################################
 run-shell "powerline-daemon -q"
-source "/home/gyh/.local/lib/python3.7/site-packages/powerline/bindings/tmux/powerline.conf"
+# SOURCE POWERLINE #
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run -b '~/.tmux/plugins/tpm/tpm'
