--- a/powerline/config.json
+++ b/powerline/config.json
@@ -26,7 +26,7 @@
 		},
 		"tmux": {
 			"colorscheme": "default",
-			"theme": "default"
+			"theme": "powerline"
 		},
 		"vim": {
 			"colorscheme": "default",
