--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -13,6 +13,9 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-pain-control'
 
+# use default shell
+set-option -g default-shell /bin/zsh
+
 # POWERLINE #################################
 # SETUP FOR TTY #############################
 # pip install powerline-status
