tmux: remove TPM and powerline

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -5,27 +5,15 @@ bind r source-file ~/.tmux.conf \; display "Reloaded!"
 set -g prefix C-s
 unbind C-b
 
+# switch panes
+bind-key h   select-pane -L
+bind-key j   select-pane -D
+bind-key k   select-pane -U
+bind-key l   select-pane -R
+
 # set vi mode when entering copy mode
 setw -g mode-keys vi
-
-# List of plugins
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-pain-control'
 
 # use default shell
 set-option -g default-shell /bin/zsh
 
-# POWERLINE #################################
-# SETUP FOR TTY #############################
-# pip install powerline-status
-# git clone https://github.com/powerline/fonts.git --depth=1 /tmp
-# cd /tmp/fonts
-# cp -r Terminus/PSF/*.psf.gz /usr/share/consolefonts
-# setfont /usr/share/consolefonts/...
-#############################################
-run-shell "powerline-daemon -q"
-# SOURCE POWERLINE #
-
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run -b '~/.tmux/plugins/tpm/tpm'
