--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -11,6 +11,16 @@ bind-key j   select-pane -D
 bind-key k   select-pane -U
 bind-key l   select-pane -R
 
+# resize panes
+bind-key -r H resize-pane -L "5"
+bind-key -r J resize-pane -D "5"
+bind-key -r K resize-pane -U "5"
+bind-key -r L resize-pane -R "5"
+
+# swap window
+set -g base-index 1
+bind m command -p "Send window to:"  "run -b '~/dotfiles/tmux/tmux-windowswap #I %1'"
+
 # set vi mode when entering copy mode
 setw -g mode-keys vi
 
