tmux: status bar styling

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -27,3 +27,13 @@ setw -g mode-keys vi
 # use default shell
 set-option -g default-shell /bin/zsh
 
+# styling
+set -g status-right ""
+set -g status-left ""
+
+set -g status-justify centre
+
+set -g default-terminal "xterm-256color"
+set-option -g status-style fg=white,bg=default,default
+set -g window-status-format "#[fg=magenta]#[fg=black]#[bg=magenta]#I #[bg=brightblack]#[fg=white] #W#[fg=brightblack]#[bg=default]"
+set -g window-status-current-format "#[fg=yellow]#[fg=black]#[bg=yellow]#I #[bg=brightblack]#[fg=white] #W#[fg=brightblack]#[bg=default]"
