zsh tmux: jump to last command

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -21,6 +21,11 @@ bind-key -r L resize-pane -R "5"
 set -g base-index 1
 bind m command -p "Send window to:"  "run -b '~/dotfiles/tmux/tmux-windowswap #I %1'"
 
+# jump to last command
+bind-key b copy-mode\;\
+           send-keys -X start-of-line\;\
+           send-keys -X search-backward " "
+
 # set vi mode when entering copy mode
 setw -g mode-keys vi
 
