--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,6 +1,13 @@
 # reload
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
+# enable mouse support
+set -g mouse on
+
+# for esc in vim
+# https://vi.stackexchange.com/questions/16148/slow-vim-escape-from-insert-mode
+set -sg escape-time 10
+
 # set prefix key
 set -g prefix C-s
 unbind C-b
@@ -10,6 +17,9 @@ bind-key h   select-pane -L
 bind-key j   select-pane -D
 bind-key k   select-pane -U
 bind-key l   select-pane -R
+
+# switch sessions
+bind-key e split-window -v "tmux list-sessions | sed -E 's/:.*$//' | grep -v \"^$(tmux display-message -p '#S')\$\" | fzf --reverse | xargs tmux switch-client -t"
 
 # resize panes
 bind-key -r H resize-pane -L "5"
