tmux: fzf window switcher

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -19,7 +19,8 @@ bind-key k   select-pane -U
 bind-key l   select-pane -R
 
 # switch sessions
-bind-key e split-window -v "tmux list-sessions | sed -E 's/:.*$//' | grep -v \"^$(tmux display-message -p '#S')\$\" | fzf --reverse | xargs tmux switch-client -t"
+# bind-key e split-window -v "tmux list-sessions | sed -E 's/:.*$//' | grep -v \"^$(tmux display-message -p '#S')\$\" | fzf --reverse | xargs tmux switch-client -t"
+bind-key f "bash ~/dotfiles/tmux/fzf-switcher.sh"
 
 # resize panes
 bind-key -r H resize-pane -L "5"
