tmux: tpm, logging, restore

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,3 +1,11 @@
+# plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-logging'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @continuum-restore 'on'
+set -g @plugin 'laktak/extrakto'
+
 # reload
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
@@ -20,7 +28,7 @@ bind-key l   select-pane -R
 
 # switch sessions
 # bind-key e split-window -v "tmux list-sessions | sed -E 's/:.*$//' | grep -v \"^$(tmux display-message -p '#S')\$\" | fzf --reverse | xargs tmux switch-client -t"
-bind-key f "bash ~/dotfiles/tmux/fzf-switcher.sh"
+bind-key f run-shell -b ~/dotfiles/tmux/fzf-switcher.sh
 
 # resize panes
 bind-key -r H resize-pane -L "5"
@@ -53,3 +61,5 @@ set -g default-terminal "xterm-256color"
 set-option -g status-style fg=white,bg=default,default
 set -g window-status-format "#[fg=magenta]#[fg=black]#[bg=magenta]#I #[bg=brightblack]#[fg=white] #W#[fg=brightblack]#[bg=default]"
 set -g window-status-current-format "#[fg=yellow]#[fg=black]#[bg=yellow]#I #[bg=brightblack]#[fg=white] #W#[fg=brightblack]#[bg=default]"
+
+run '~/.tmux/plugins/tpm/tpm'
