tmux: window switcher

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,3 +1,5 @@
+set -g history-limit 5000
+
 # plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-logging'
@@ -26,9 +28,16 @@ bind-key j   select-pane -D
 bind-key k   select-pane -U
 bind-key l   select-pane -R
 
+# switch window
+bind-key -n S-down new-window
+bind-key -n S-left prev
+bind-key -n S-right next
+bind-key -n C-S-left swap-window -t -1
+bind-key -n C-S-right swap-window -t +1
+
 # switch sessions
 # bind-key e split-window -v "tmux list-sessions | sed -E 's/:.*$//' | grep -v \"^$(tmux display-message -p '#S')\$\" | fzf --reverse | xargs tmux switch-client -t"
-bind-key f run-shell -b ~/dotfiles/tmux/fzf-switcher.sh
+bind-key s run-shell -b ~/dotfiles/tmux/fzf-switcher.sh
 
 # resize panes
 bind-key -r H resize-pane -L "5"
