tmux: extrakto with default full window and more patterns

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -8,6 +8,9 @@ set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @continuum-restore 'on'
 set -g @plugin 'laktak/extrakto'
 
+# extrakto settings
+set -g @extrakto_grab_area "window full"
+
 # reload
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
