--- a/tmux/extrakto.conf
+++ b/tmux/extrakto.conf
@@ -58,4 +58,21 @@ alt2: '([^'\n\r]+)'
 
 [cmd]
 regex: ((?<=[❯❮]\s).*)
-lstrip: \s
+lstrip: " "
+rstrip: " "
+
+[uuid]
+regex: ([a-f0-9]{8}-?[a-f0-9]{4}-?4[a-f0-9]{3}-?[89ab][a-f0-9]{3}-?[a-f0-9]{12})
+
+[sha1]:
+regex: (\b[0-9a-f]{5,40}\b)
+
+[time-milli]:
+regex: \s(\d{13})\D
+lstrip: " "
+rstrup: " "
+
+[time]:
+regex: \s(\d{10})\D
+lstrip: " "
+rstrup: " "
