--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,5 +1,8 @@
 set -g history-limit 5000
 
+set-option -g set-titles on
+set-option -g set-titles-string '#S'
+
 # plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-logging'
