tmux: add fuzzback

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,4 +1,4 @@
-set -g history-limit 5000
+set -g history-limit 10000
 
 set-option -g set-titles on
 set-option -g set-titles-string '#S'
@@ -10,6 +10,12 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @continuum-restore 'on'
 set -g @plugin 'laktak/extrakto'
+set -g @plugin 'roosta/tmux-fuzzback'
+
+# fuzzback settings
+set -g @fuzzback-bind /
+set -g @fuzzback-popup 1
+set -g @fuzzback-popup-size '90%'
 
 # extrakto settings
 set -g @extrakto_grab_area "window full"
