--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -83,4 +83,12 @@ set-option -g status-style fg=white,bg=default,default
 set -g window-status-format "#[fg=magenta]#[fg=black]#[bg=magenta]#I #[bg=brightblack]#[fg=white] #W#[fg=brightblack]#[bg=default]"
 set -g window-status-current-format "#[fg=yellow]#[fg=black]#[bg=yellow]#I #[bg=brightblack]#[fg=white] #W#[fg=brightblack]#[bg=default]"
 
+# add a blank status bar above current one
+# https://github.com/tmux/tmux/issues/1886#issuecomment-525382148
+if -F '#{!=:#{status},2}' {
+    set -Fg 'status-format[1]' '#{status-format[0]}'
+    set -g 'status-format[0]' ''
+    set -g status 2
+}
+
 run '~/.tmux/plugins/tpm/tpm'
