feat(shell): enhance terminal tooling and AI integration

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -25,6 +25,22 @@ bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
 # enable mouse support
 set -g mouse on
+bind e run-shell 'tmux show -gqv mouse | grep -q on && tmux set -g mouse off || tmux set -g mouse on'
+
+# Prefix + g => toggle gitui popup, unique per pane
+bind-key g if-shell -F '#{m:gitui-popup-*,#{session_name}}' \
+  'kill-session' \
+  'display-popup -E -w 90% -h 90% -d "#{pane_current_path}" "tmux new-session -A -s \"gitui-popup-#{pane_id}\" -c \"#{pane_current_path}\" gitui"'
+
+# tmux default: Prefix + t shows the clock, so remove it
+unbind-key t
+
+# open terminal popup in active pane's cwd
+bind-key t display-popup -E -w 90% -h 90% -d "#{pane_current_path}"
+
+# while popup is open, pressing "t" closes it
+bind-key -T popup t display-popup -C
+
 
 # for esc in vim
 # https://vi.stackexchange.com/questions/16148/slow-vim-escape-from-insert-mode
